--- a/public/assets_general/css/style.css
+++ b/public/assets_general/css/style.css
@@ -131,6 +131,365 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 
+      /*--------------------------------------------------------------
+      # Main
+      --------------------------------------------------------------*/
+      #main1 {
+        margin-top: 5px;
+        padding: 20px 30px;
+        transition: all 0.3s;
+      }
+      @media (max-width: 1199px) {
+        #main1 {
+          padding: 20px;
+        }
+      }
+
+            /* Card */
+      .card1 {
+        margin-bottom: 30px;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+        overflow: hidden;
+      }
+
+      .card-header, .card-footer {
+        border-color: #ebeef4;
+        background-color: #fff;
+        color: #798eb3;
+        padding: 15px;
+      }
+
+      .card-title1 {
+        padding: 20px 0 15px 0;
+        font-size: 18px;
+        font-weight: 500;
+        color: #012970;
+        font-family: "Poppins", sans-serif;
+      }
+      .card-title1 span {
+        color: #899bbd;
+        font-size: 14px;
+        font-weight: 400;
+      }
+
+      .card-body1 {
+        padding: 0 20px 20px 20px;
+      }
+
+      .card-img-overlay {
+        background-color: rgba(255, 255, 255, 0.6);
+      }
+
+      /*--------------------------------------------------------------
+      # Sidebar1
+      --------------------------------------------------------------*/
+      .sidebar1 {
+        position: fixed;
+        top: 60px;
+        left: 0;
+        bottom: 0;
+        width: 300px;
+        z-index: 996;
+        transition: all 0.3s;
+        padding: 20px;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: #aab7cf transparent;
+        box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
+        background-color: #fff;
+      }
+      @media (max-width: 1199px) {
+        .sidebar1 {
+          left: -300px;
+        }
+      }
+      .sidebar1::-webkit-scrollbar {
+        width: 5px;
+        height: 8px;
+        background-color: #fff;
+      }
+      .sidebar1::-webkit-scrollbar-thumb {
+        background-color: #aab7cf;
+      }
+
+      @media (min-width: 1200px) {
+        #main1, #footer1 {
+          margin-left: 300px;
+        }
+      }
+      @media (max-width: 1199px) {
+        .toggle-sidebar1 .sidebar1 {
+          left: 0;
+        }
+      }
+      @media (min-width: 1200px) {
+        .toggle-sidebar1 #main1, .toggle-sidebar1 #footer {
+          margin-left: 0;
+        }
+        .toggle-sidebar1 .sidebar1 {
+          left: -300px;
+        }
+      }
+
+      .sidebar-nav1 {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+      }
+      .sidebar-nav1 li {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+      }
+      .sidebar-nav1 .nav-item1 {
+        margin-bottom: 5px;
+      }
+      .sidebar-nav1 .nav-heading1 {
+        font-size: 11px;
+        text-transform: uppercase;
+        color: #899bbd;
+        font-weight: 600;
+        margin: 10px 0 5px 15px;
+      }
+      .sidebar-nav1 .nav-link1 {
+        display: flex;
+        align-items: center;
+        font-size: 15px;
+        font-weight: 600;
+        color: rgba(5, 1, 37, 0.8);
+        transition: 0.3;
+        background: #f6f9ff;
+        padding: 10px 15px;
+        border-radius: 4px;
+      }
+      .sidebar-nav1 .nav-link1 i {
+        font-size: 16px;
+        margin-right: 10px;
+        color: rgba(5, 1, 37, 0.8);
+      }
+      .sidebar-nav1 .nav-link1.collapsed {
+        color: #012970;
+        background: #fff;
+      }
+      .sidebar-nav1 .nav-link1.collapsed i {
+        color: #899bbd;
+      }
+      .sidebar-nav1 .nav-link1:hover {
+        color: rgba(5, 1, 37, 0.8);
+        background: #f6f9ff;
+      }
+      .sidebar-nav1 .nav-link1:hover i {
+        color: rgba(5, 1, 37, 0.8);
+      }
+      .sidebar-nav1 .nav-link1 .bi-chevron-down {
+        margin-right: 0;
+        transition: transform 0.2s ease-in-out;
+      }
+      .sidebar-nav1 .nav-link1:not(.collapsed) .bi-chevron-down {
+        transform: rotate(180deg);
+      }
+      .sidebar-nav1 .nav-content1 {
+        padding: 5px 0 0 0;
+        margin: 0;
+        list-style: none;
+      }
+      .sidebar-nav1 .nav-content1 a {
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        font-weight: 600;
+        color: #012970;
+        transition: 0.3;
+        padding: 10px 0 10px 40px;
+        transition: 0.3s;
+      }
+      .sidebar-nav1 .nav-content1 a i {
+        font-size: 6px;
+        margin-right: 8px;
+        line-height: 0;
+        border-radius: 50%;
+      }
+      .sidebar-nav1 .nav-content1 a:hover, .sidebar-nav1 .nav-content1 a.active {
+        color: #4154f1;
+      }
+      .sidebar-nav1 .nav-content1 a.active i {
+        background-color: #4154f1;
+      }
+
+      /*--------------------------------------------------------------
+      # Dashboard
+      --------------------------------------------------------------*/
+      /* Filter dropdown */
+      .dashboard .filter {
+        position: absolute;
+        right: 0px;
+        top: 15px;
+      }
+      .dashboard .filter .icon {
+        color: #aab7cf;
+        padding-right: 20px;
+        padding-bottom: 5px;
+        transition: 0.3s;
+        font-size: 16px;
+      }
+      .dashboard .filter .icon:hover, .dashboard .filter .icon:focus {
+        color: #4154f1;
+      }
+      .dashboard .filter .dropdown-header {
+        padding: 8px 15px;
+      }
+      .dashboard .filter .dropdown-header h6 {
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: 1px;
+        color: #aab7cf;
+        margin-bottom: 0;
+        padding: 0;
+      }
+      .dashboard .filter .dropdown-item {
+        padding: 8px 15px;
+      }
+
+      /* Info Cards */
+      .dashboard .info-card {
+        padding-bottom: 10px;
+      }
+      .dashboard .info-card h6 {
+        font-size: 28px;
+        color: #012970;
+        font-weight: 700;
+        margin: 0;
+        padding: 0;
+      }
+      .dashboard .card-icon {
+        font-size: 32px;
+        line-height: 0;
+        width: 64px;
+        height: 64px;
+        flex-shrink: 0;
+        flex-grow: 0;
+      }
+      .dashboard .sales-card .card-icon {
+        color: #4154f1;
+        background: #f6f6fe;
+      }
+      .dashboard .revenue-card .card-icon {
+        color: #2eca6a;
+        background: #e0f8e9;
+      }
+      .dashboard .customers-card .card-icon {
+        color: #ff771d;
+        background: #ffecdf;
+      }
+
+      /* Activity */
+      .dashboard .activity {
+        font-size: 14px;
+      }
+      .dashboard .activity .activity-item .activite-label {
+        color: #888;
+        position: relative;
+        flex-shrink: 0;
+        flex-grow: 0;
+        min-width: 64px;
+      }
+      .dashboard .activity .activity-item .activite-label::before {
+        content: "";
+        position: absolute;
+        right: -11px;
+        width: 4px;
+        top: 0;
+        bottom: 0;
+        background-color: #eceefe;
+      }
+      .dashboard .activity .activity-item .activity-badge {
+        margin-top: 3px;
+        z-index: 1;
+        font-size: 11px;
+        line-height: 0;
+        border-radius: 50%;
+        flex-shrink: 0;
+        border: 3px solid #fff;
+        flex-grow: 0;
+      }
+      .dashboard .activity .activity-item .activity-content {
+        padding-left: 10px;
+        padding-bottom: 20px;
+      }
+      .dashboard .activity .activity-item:first-child .activite-label::before {
+        top: 5px;
+      }
+      .dashboard .activity .activity-item:last-child .activity-content {
+        padding-bottom: 0;
+      }
+
+      /* News & Updates */
+      .dashboard .news .post-item + .post-item {
+        margin-top: 15px;
+      }
+      .dashboard .news img {
+        width: 80px;
+        float: left;
+        border-radius: 5px;
+      }
+      .dashboard .news h4 {
+        font-size: 15px;
+        margin-left: 95px;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+      .dashboard .news h4 a {
+        color: #012970;
+        transition: 0.3s;
+      }
+      .dashboard .news h4 a:hover {
+        color: #4154f1;
+      }
+      .dashboard .news p {
+        font-size: 14px;
+        color: #777777;
+        margin-left: 95px;
+      }
+
+      /* Recent Sales */
+      .dashboard .recent-sales {
+        font-size: 14px;
+      }
+      .dashboard .recent-sales .table thead {
+        background: #f6f6fe;
+      }
+      .dashboard .recent-sales .table thead th {
+        border: 0;
+      }
+      .dashboard .recent-sales .dataTable-top {
+        padding: 0 0 10px 0;
+      }
+      .dashboard .recent-sales .dataTable-bottom {
+        padding: 10px 0 0 0;
+      }
+
+      /* Top Selling */
+      .dashboard .top-selling {
+        font-size: 14px;
+      }
+      .dashboard .top-selling .table thead {
+        background: #f6f6fe;
+      }
+      .dashboard .top-selling .table thead th {
+        border: 0;
+      }
+      .dashboard .top-selling .table tbody td {
+        vertical-align: middle;
+      }
+      .dashboard .top-selling img {
+        border-radius: 5px;
+        max-width: 60px;
+      }
+
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -321,197 +680,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #3498db;
 }
 .navbar-mobile .dropdown > .dropdown-active {
-  display: block;
-}
-
-
-/**
-* Second NavBar Navigation 
-*/
-.navbar1 {
-  padding: 0;
-}
-.navbar1 ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  align-items: center;
-}
-.navbar1 li {
-  position: relative;
-}
-.navbar1 a, .navbar1 a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 10px 30px;
-  font-size: 15px;
-  font-weight: 400;
-  color: #020101;
-  white-space: nowrap;
-  transition: 0.3s;
-}
-.navbar1 a i, .navbar1 a:focus i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
-}
-.navbar1 a:hover, .navbar1 .active, .navbar1 .active:focus, .navbar1 li:hover > a {
-  color: #3498db;
-}
-.navbar1 .getstarted, .navbar1 .getstarted:focus {
-  background: #3498db;
-  padding: 8px 25px;
-  margin-left: 30px;
-  border-radius: 50px;
-  color: #fff;
-}
-.navbar1 .getstarted:hover, .navbar1 .getstarted:focus:hover {
-  color: #fff;
-  background: #4aa3df;
-}
-.navbar1 .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 30px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-  border-radius: 4px;
-}
-.navbar1 .dropdown ul li {
-  min-width: 200px;
-}
-.navbar1 .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-}
-.navbar1 .dropdown ul a i {
-  font-size: 12px;
-}
-.navbar1 .dropdown ul a:hover, .navbar1 .dropdown ul .active:hover, .navbar1 .dropdown ul li:hover > a {
-  color: #3498db;
-}
-.navbar1 .dropdown:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-.navbar1 .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-.navbar1 .dropdown .dropdown:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-@media (max-width: 1366px) {
-  .navbar1 .dropdown .dropdown ul {
-    left: -90%;
-  }
-  .navbar1 .dropdown .dropdown:hover > ul {
-    left: -100%;
-  }
-}
-
-/**
-* Second NavBar Mobile Navigation 
-*/
-.mobile1-nav-toggle {
-  color: #222222;
-  font-size: 28px;
-  cursor: pointer;
-  display: none;
-  line-height: 0;
-  transition: 0.5s;
-}
-.mobile1-nav-toggle.bi-x {
-  color: #fff;
-}
-
-@media (max-width: 991px) {
-  .mobile1-nav-toggle {
-    display: block;
-  }
-
-  .navbar1 ul {
-    display: none;
-  }
-}
-.navbar1-mobile {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: rgba(9, 9, 9, 0.9);
-  transition: 0.3s;
-  z-index: 999;
-}
-.navbar1-mobile .mobile1-nav-toggle {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-.navbar1-mobile ul {
-  display: block;
-  position: absolute;
-  top: 55px;
-  right: 15px;
-  bottom: 15px;
-  left: 15px;
-  padding: 10px 0;
-  border-radius: 8px;
-  background-color: #fff;
-  overflow-y: auto;
-  transition: 0.3s;
-}
-.navbar1-mobile a, .navbar1-mobile a:focus {
-  padding: 10px 20px;
-  font-size: 15px;
-  color: #222222;
-}
-.navbar1-mobile a:hover, .navbar1-mobile .active, .navbar1-mobile li:hover > a {
-  color: #3498db;
-}
-.navbar1-mobile .getstarted, .navbar1-mobile .getstarted:focus {
-  margin: 15px;
-}
-.navbar1-mobile .dropdown ul {
-  position: static;
-  display: none;
-  margin: 10px 20px;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 1;
-  visibility: visible;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-}
-.navbar1-mobile .dropdown ul li {
-  min-width: 200px;
-}
-.navbar1-mobile .dropdown ul a {
-  padding: 10px 20px;
-}
-.navbar1-mobile .dropdown ul a i {
-  font-size: 12px;
-}
-.navbar1-mobile .dropdown ul a:hover, .navbar1-mobile .dropdown ul .active:hover, .navbar1-mobile .dropdown ul li:hover > a {
-  color: #3498db;
-}
-.navbar1-mobile .dropdown > .dropdown-active {
   display: block;
 }
 
