avances sprint 5 - arreglo detalles version movil

--- a/public/assets_general/css/style.css
+++ b/public/assets_general/css/style.css
@@ -220,15 +220,15 @@ h1, h2, h3, h4, h5, h6 {
         }
       }
       @media (max-width: 1199px) {
-        .toggle-sidebar1 .sidebar1 {
+        .toggle-sidebar .sidebar1 {
           left: 0;
         }
       }
       @media (min-width: 1200px) {
-        .toggle-sidebar1 #main1, .toggle-sidebar1 #footer {
+        .toggle-sidebar #main1, .toggle-sidebar #footer {
           margin-left: 0;
         }
-        .toggle-sidebar1 .sidebar1 {
+        .toggle-sidebar .sidebar1 {
           left: -300px;
         }
       }
